# d2lapi-remastered

./: LEGACY-ParsingScript.ipynb  LEGACY-ParsingScript.py  LICENSE  README.md  d2lapi.code-workspace  environment.yml  setup.cfg
src/d2lapi/: Final_Quiz.py
