[metadata]
name = d2lapi-remastered
description = A python library for D2L Data Filtration. 
author = Matthew Scott Hernandez, Olivia Qiu, Erin Sawyer, Jonah Wehner, Jiaye Xie, Pranay Pentaparthy, 
author_email = herna757@msu.edu

version = 2.0.1


[options]

packages.dir = 
        =src
packages= find:
include_package_data = True
python_requires = >=3.7
setup_requires =
    setuptools_scm

[options.packages.find]
where = src